--- a/assets/index.html
+++ b/assets/index.html
@@ -6,21 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
+    <div class="jumbotron text-center bg-secondary text-light">
         <h1>Weather Dashboard</h1>
-    </header>
 
-    <aside>
-        <!-- Add 2% margin-left, and 2% margin-top for h2 header -->
-        <h2>Search for a City:</h2>
-        <input type="text" class="search">
-        <button type="submit" class="btn"><i class="fa fa-search"></i></button>
-    </aside>
-    <main>Hello World</main>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-4" id="search">
+                <h3>Search for a City:</h3>
+            </div>
+
+            <div class="col-lg-8" id="weather">
+                <h1> WORLD</h1>
+                <br>
+                <div id="forecast">
+
+                    Sass mixins for more semantic markup. World
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    </div>
+
+
+
+    </div>
 
 
 
