--- a/assets/index.html
+++ b/assets/index.html
@@ -18,16 +18,19 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-4" id="search">
+            <div class="col-lg-4" id="searchContainer">
                 <h3>Search for a City:</h3>
+                <input type="text" placeholder="City Name" id="cityInput">
+                <button type="submit" id="btn"><i class="fa fa-search"></i></button>
+                <br>
+                <div class="cityList"> <br> <br> </div>
             </div>
 
-            <div class="col-lg-8" id="weather">
-                <h1> WORLD</h1>
+            <div class="col-lg-8" id="weatherContainer">
+                <h1>WORLD</h1>
                 <br>
-                <div id="forecast">
-
-                    Sass mixins for more semantic markup. World
+                <div class="col-lg-12" id="forecastContainer">
+                    <h2>5-Day Forecast:</h2>
                 </div>
             </div>
         </div>
@@ -43,7 +46,7 @@
     </div>
 
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </body>
 
